--- a/.woodpecker/build_go_release.yaml
+++ b/.woodpecker/build_go_release.yaml
@@ -11,6 +11,7 @@ steps:
     settings:
       files:
         - out/verify_pw*
+      discussion-category: announcements
       title: ${CI_COMMIT_TAG##v}
       api-key:
         from_secret: github_token
