--- a/.woodpecker/test_changes.yaml
+++ b/.woodpecker/test_changes.yaml
@@ -18,9 +18,9 @@ steps:
   prepare_postgresql_database:
     image: postgres
     commands:
-      - env
+      - psql_host=$(env | grep PORT_5432_TCP_ADDR | cut -d "=" -f 2)
       - sleep 30s
-      - psql -d test -p 5432 -U test -f ./sql/prep_psql.sql
+      - psql -h ${psql_host} -d test -p 5432 -U test -f ./sql/prep_psql.sql
     environment:
       - PGPASSWORD=example
     when:
