--- a/.woodpecker/test_changes.yaml
+++ b/.woodpecker/test_changes.yaml
@@ -18,8 +18,7 @@ steps:
   prepare_postgresql_database:
     image: postgres
     commands:
-      - sleep 30s
-      - psql_host=$(env | grep PORT_5432_TCP_ADDR | cut -d "=" -f 2)
+      - env | grep PORT_5432_TCP_ADDR | cut -d "=" -f 2
       - echo "connecting to ${psql_host}"
       - psql -h ${psql_host} -d test -p 5432 -U test -f ./sql/prep_psql.sql
     environment:
