add test for mysqkl

--- a/.woodpecker/test_changes.yaml
+++ b/.woodpecker/test_changes.yaml
@@ -34,7 +34,8 @@ steps:
   test-authentication:
     image: golang:1.21.5
     commands:
-      - test/test_pw.sh
+      - test/test_pgsql_pw.sh
+      - test/test_mysql_pw.sh
     when:
       branch: ${CI_REPO_DEFAULT_BRANCH}
       event: [pull_request, push]
