--- a/.woodpecker/test_changes.yaml
+++ b/.woodpecker/test_changes.yaml
@@ -35,7 +35,7 @@ steps:
     image: golang:1.21.5
     environment:
       - GOOS=linux
-      - GOARCH="amd64"
+      - GOARCH=amd64
     commands:
       - mkdir ./out
       - go mod tidy
@@ -45,7 +45,7 @@ steps:
     image: golang:1.21.5
     environment:
       - GOOS=linux
-      - GOARCH="386"
+      - GOARCH=386
     commands:
       - mkdir ./out
       - go mod tidy
@@ -55,7 +55,7 @@ steps:
     image: golang:1.21.5
     environment:
       - GOOS=linux
-      - GOARCH="arm64"
+      - GOARCH=arm64
     commands:
       - mkdir ./out
       - go mod tidy
@@ -65,7 +65,7 @@ steps:
     image: golang:1.21.5
     environment:
       - GOOS=linux
-      - GOARCH="arm"
+      - GOARCH=arm
     commands:
       - mkdir ./out
       - go mod tidy
