--- a/.woodpecker/test_changes.yaml
+++ b/.woodpecker/test_changes.yaml
@@ -19,55 +19,55 @@ services:
       - 5432
 steps:
   prepare_mysql_database:
-    group: db_prep
+    group: test_prep
     image: mysql
     commands:
       - test/prepare_mysql.sh
   prepare_postgresql_database:
-    group: db_prep
+    group: test_prep
     image: postgres
     commands:
       - test/prepare_postgresql.sh
     environment:
       - PGPASSWORD=example
   build-test-pureftpd-authd-plugin_x86_64:
-    group: build_binaries
+    group: test_prep
     image: golang:1.21.5
     environment:
       - GOOS=linux
       - GOARCH=amd64
     commands:
-      - mkdir ./out
+      - mkdir -p ./out
       - go mod tidy
       - go build -o "./out/verify_pw_${ARCH}" verify_pw.go
   build-test-pureftpd-authd-plugin_x86:
-    group: build_binaries
+    group: test_prep
     image: golang:1.21.5
     environment:
       - GOOS=linux
       - GOARCH=386
     commands:
-      - mkdir ./out
+      - mkdir -p ./out
       - go mod tidy
       - go build -o "./out/verify_pw_${ARCH}" verify_pw.go
   build-test-pureftpd-authd-plugin_arm64:
-    group: build_binaries
+    group: test_prep
     image: golang:1.21.5
     environment:
       - GOOS=linux
       - GOARCH=arm64
     commands:
-      - mkdir ./out
+      - mkdir -p ./out
       - go mod tidy
       - go build -o "./out/verify_pw_${ARCH}" verify_pw.go
   build-test-pureftpd-authd-plugin_arm:
-    group: build_binaries
+    group: test_prep
     image: golang:1.21.5
     environment:
       - GOOS=linux
       - GOARCH=arm
     commands:
-      - mkdir ./out
+      - mkdir -p ./out
       - go mod tidy
       - go build -o "./out/verify_pw_${ARCH}" verify_pw.go
   test-authentication-pgsql:
