--- a/.woodpecker/test_changes.yaml
+++ b/.woodpecker/test_changes.yaml
@@ -39,7 +39,7 @@ steps:
     commands:
       - mkdir -p ./out
       - go mod tidy
-      - go build -o "./out/verify_pw_${ARCH}" verify_pw.go
+      - go build -o "./out/verify_pw_${GOARCH}" verify_pw.go
   build-test-pureftpd-authd-plugin_x86:
     group: test_prep
     image: golang:1.21.5
@@ -49,7 +49,7 @@ steps:
     commands:
       - mkdir -p ./out
       - go mod tidy
-      - go build -o "./out/verify_pw_${ARCH}" verify_pw.go
+      - go build -o "./out/verify_pw_${GOARCH}" verify_pw.go
   build-test-pureftpd-authd-plugin_arm64:
     group: test_prep
     image: golang:1.21.5
@@ -59,7 +59,7 @@ steps:
     commands:
       - mkdir -p ./out
       - go mod tidy
-      - go build -o "./out/verify_pw_${ARCH}" verify_pw.go
+      - go build -o "./out/verify_pw_${GOARCH}" verify_pw.go
   build-test-pureftpd-authd-plugin_arm:
     group: test_prep
     image: golang:1.21.5
@@ -69,7 +69,7 @@ steps:
     commands:
       - mkdir -p ./out
       - go mod tidy
-      - go build -o "./out/verify_pw_${ARCH}" verify_pw.go
+      - go build -o "./out/verify_pw_${GOARCH}" verify_pw.go
   test-authentication-pgsql:
     group: test_auth
     image: golang:1.21.5
