--- a/.woodpecker/test_changes.yaml
+++ b/.woodpecker/test_changes.yaml
@@ -36,28 +36,28 @@ steps:
     commands:
       - mkdir -p ./out
       - GOOS=linux GOARCH=amd64 go mod tidy
-      - GOOS=linux GOARCH=amd64 go build -o "./out/verify_pw_${GOARCH}" verify_pw.go
+      - GOOS=linux GOARCH=amd64 go build -o "./out/verify_pw_amd64" verify_pw.go
   build-test-pureftpd-authd-plugin_x86:
     group: test_prep
     image: golang:1.21.5
     commands:
       - mkdir -p ./out
       - GOOS=linux GOARCH=386 go mod tidy
-      - GOOS=linux GOARCH=386 go build -o "./out/verify_pw_${GOARCH}" verify_pw.go
+      - GOOS=linux GOARCH=386 go build -o "./out/verify_pw_i386" verify_pw.go
   build-test-pureftpd-authd-plugin_arm64:
     group: test_prep
     image: golang:1.21.5
     commands:
       - mkdir -p ./out
       - GOOS=linux GOARCH=arm64 go mod tidy
-      - GOOS=linux GOARCH=arm64 go build -o "./out/verify_pw_${GOARCH}" verify_pw.go
+      - GOOS=linux GOARCH=arm64 go build -o "./out/verify_pw_arm64" verify_pw.go
   build-test-pureftpd-authd-plugin_arm:
     group: test_prep
     image: golang:1.21.5
     commands:
       - mkdir -p ./out
       - GOOS=linux GOARCH=arm go mod tidy
-      - GOOS=linux GOARCH=arm go build -o "./out/verify_pw_${GOARCH}" verify_pw.go
+      - GOOS=linux GOARCH=arm go build -o "./out/verify_pw_arm" verify_pw.go
   test-authentication-pgsql:
     group: test_auth
     image: golang:1.21.5
