--- a/.woodpecker/build_new_release.yaml
+++ b/.woodpecker/build_new_release.yaml
@@ -1,32 +1,32 @@
 steps:
   build-pureftpd-authd-plugin_x86_64:
     group: build_binaries
-    image: golang:1.21.5
+    image: golang:1.23.2
     commands:
       - mkdir -p ./out
-      - GOOS=linux GOARCH=amd64 go mod tidy
-      - GOOS=linux GOARCH=amd64 go build -o "./out/verify_pw_amd64" verify_pw.go
+      - GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go mod tidy
+      - GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o "./out/verify_pw_amd64" verify_pw.go
   build-pureftpd-authd-plugin_x86:
     group: build_binaries
-    image: golang:1.21.5
+    image: golang:1.23.2
     commands:
       - mkdir -p ./out
-      - GOOS=linux GOARCH=386 go mod tidy
-      - GOOS=linux GOARCH=386 go build -o "./out/verify_pw_i386" verify_pw.go
+      - GOOS=linux GOARCH=386 CGO_ENABLED=0 go mod tidy
+      - GOOS=linux GOARCH=386 CGO_ENABLED=0 go build -o "./out/verify_pw_i386" verify_pw.go
   build-pureftpd-authd-plugin_arm64:
     group: build_binaries
-    image: golang:1.21.5
+    image: golang:1.23.2
     commands:
       - mkdir -p ./out
-      - GOOS=linux GOARCH=arm64 go mod tidy
-      - GOOS=linux GOARCH=arm64 go build -o "./out/verify_pw_arm64" verify_pw.go
+      - GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go mod tidy
+      - GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -o "./out/verify_pw_arm64" verify_pw.go
   build-pureftpd-authd-plugin_arm:
     group: build_binaries
-    image: golang:1.21.5
+    image: golang:1.23.2
     commands:
       - mkdir -p ./out
-      - GOOS=linux GOARCH=arm go mod tidy
-      - GOOS=linux GOARCH=arm go build -o "./out/verify_pw_arm" verify_pw.go
+      - GOOS=linux GOARCH=arm CGO_ENABLED=0 go mod tidy
+      - GOOS=linux GOARCH=arm CGO_ENABLED=0 go build -o "./out/verify_pw_arm" verify_pw.go
   release-to-github:
     image: woodpeckerci/plugin-github-release
     settings:
